# outus_cpp_professional

./: .gitignore
.github/workflows/: main.yml  task2.yml  task3.yml  task4.yml  task5.yml  task6.yml  task7.yml
task1/: CMakeLists.txt  increment_script.cmake  lib.cpp  main.cpp
task1/gtests/: CMakeLists.txt  tests.cpp
task2/: CMakeLists.txt  ip_adr_pool.cpp  ip_adr_pool.hpp  ip_filter.cpp
task2/gtests/: CMakeLists.txt  tests.cpp
task3/: CMakeLists.txt  allocator.cpp  custom_allocator.hpp
task4/: CMakeLists.txt  print_ip.cpp
task5/: CMakeLists.txt  base.hpp  controller.hpp  main.cpp  modulFile.hpp  modulShape.hpp  view.hpp
task6/: CMakeLists.txt  main.cpp
task7/: CMakeLists.txt  main.cpp  test_dynamic_bulks.txt  test_static_bulks.txt
